feat: new config

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -24,7 +24,7 @@
     "memory",
     // "swap",
     "disk",
-    // "poweradapter",
+    "poweradapter",
     // "locale",
     "break",
     "colors"
