--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+# monitor=HDMI-A-1,1920x1080@60,0x0,1
 
 
 ###################
@@ -46,11 +47,10 @@ $rofiPath = ~/.config/rofi
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP HYPRLAND_INSTANCE_SIGNATURE
-exec-once = uwsm
-exec-once = swww-daemon
-exec-once = uwsm app -- waybar
-exec-once = uwsm app -- mako
+# exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP HYPRLAND_INSTANCE_SIGNATURE
+# exec-once = swww-daemon
+exec-once = waybar
+exec-once = mako
 
 
 #############################
@@ -60,12 +60,25 @@ exec-once = uwsm app -- mako
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = GTK_THEME,catppuccin-mocha-mauve-standard+default
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
 env = LANG,pt_BR.UTF-8
 env = LC_TIME,pt_BR.UTF-8
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 
 #####################
@@ -224,16 +237,17 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, uwsm app -- $terminal
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod CTRL SHIFT, K, exit,
-bind = $mainMod, E, exec, uwsm app -- $fileManager
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Y, togglefloating,
-bind = $mainMod, A, exec, uwsm app -- $rofiPath/launcher/launcher.sh
-bind = $mainMod, comma, exec, uwsm app -- $rofiPath/wallpaper/wallpaper.sh
+bind = $mainMod, A, exec, $rofiPath/launcher/launcher.sh
+bind = $mainMod, comma, exec, $rofiPath/wallpaper/wallpaper.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
-bind = $mainMod, M, fullscreen
+bind = $mainMod SHIFT, M, fullscreen
+bind = $mainMod, M, fullscreen, 1
 bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Move focus with mainMod + keyboard keys
