--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -2,23 +2,31 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "modules": [
     "title",
+
     "separator",
+
     "os",
-    // "host",
+    "wm",
     "kernel",
     "uptime",
     "packages",
+
+    "separator",
+
     "shell",
-    "display",
+    "terminal",
+    "terminalfont",
     "de",
-    "wm",
     "wmtheme",
     "theme",
     "icons",
     "font",
-    "cursor",
-    "terminal",
-    "terminalfont",
+    // "cursor",
+
+    "separator",
+
+    "host",
+    "display",
     "cpu",
     "gpu",
     "memory",
