--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -2,38 +2,77 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "modules": [
     "title",
-
     "separator",
-
-    "os",
-    "wm",
-    "kernel",
-    "uptime",
-    "packages",
-
-    "separator",
-
-    "shell",
-    "terminal",
-    "terminalfont",
-    "de",
-    "wmtheme",
-    "theme",
-    "icons",
-    "font",
-    // "cursor",
-
-    "separator",
-
-    "host",
-    "display",
-    "cpu",
-    "gpu",
-    "memory",
-    // "swap",
-    "disk",
+    {
+        "type" :"os",
+        "key": "OS",
+        "format": "{name}"
+    },
+    {
+        "type": "wm",
+        "key": "WM",
+        "format": "{process-name}"
+    },
+    {
+        "type": "kernel",
+        "key": "Kernel",
+        "format": "{sysname} {release}"
+    },
+    {
+        "type": "uptime",
+        "key": "Uptime"
+    },
+    {
+        "type": "packages",
+        "key": "Packages"
+    },
+    "break",
+    {
+        "type": "shell",
+        "key": "Shell",
+        "format": "{process-name}"
+    },
+    {
+        "type": "terminal",
+        "key": "Terminal",
+        "format": "{pretty-name}"
+    },
+    {
+        "type": "theme",
+        "key": "Theme"
+    },
+    {
+        "type": "icons",
+        "key": "Icons"
+    },
+    {
+        "type": "font",
+        "key": "Font"
+    },
+    "break",
+    {
+        "type": "cpu",
+        "key": "CPU",
+        "format": "{name} ({cores-physical}/{cores-logical})"
+    },
+    {
+        "type": "gpu",
+        "key": "GPU",
+        "format": "{name}"
+    },
+    {
+        "type": "memory",
+        "key": "Memory",
+        "format": "{total}"
+    },
+    {
+        "type": "host",
+        "key": "Host",
+        "format": "{name}"
+    },
+    // "disk",
+    // "display",
     "poweradapter",
-    // "locale",
     "break",
     "colors"
   ]
