feat/fix: new files and more fixes

--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -70,9 +70,11 @@
         "key": "Host",
         "format": "{name}"
     },
-    // "disk",
-    // "display",
-    "poweradapter",
+    {
+        "type": "display",
+        "key": "Display",
+        "format": "{width}x{height} @{refresh-rate}Hz {inch}\""
+    },
     "break",
     "colors"
   ]
