--- a/Configs/.config/gtk-4.0/settings.ini
+++ b/Configs/.config/gtk-4.0/settings.ini
@@ -1,10 +1,7 @@
 [Settings]
-; gtk-theme-name = catppuccin-mocha-mauve-standard+default
-; gtk-icon-theme-name = Papirus-Dark
-; gtk-cursor-theme-name = Bibata-Modern-Ice
-; gtk-theme-name=adw-gtk3
-; gtk-icon-theme-name=Adwaita
+gtk-theme-name=Adwaita
+gtk-icon-theme-name=Adwaita
+gtk-font-name=JetBrainsMono Nerd Font Medium 12
 gtk-cursor-theme-name=default
 gtk-cursor-theme-size=24
-gtk-font-name=JetBrainsMono Nerd Font Mono Medium 11
 gtk-application-prefer-dark-theme=1
