--- a/Configs/.config/gtk-3.0/settings.ini
+++ b/Configs/.config/gtk-3.0/settings.ini
@@ -1,10 +1,17 @@
 [Settings]
-; gtk-theme-name = catppuccin-mocha-mauve-standard+default
-; gtk-icon-theme-name = Papirus-Dark
-; gtk-cursor-theme-name = Bibata-Modern-Ice
-; gtk-theme-name=adw-gtk3
-; gtk-icon-theme-name=Adwaita
+gtk-theme-name=Adwaita
+gtk-icon-theme-name=Adwaita
+gtk-font-name=JetBrainsMono Nerd Font Medium 12
 gtk-cursor-theme-name=default
 gtk-cursor-theme-size=24
-gtk-font-name=JetBrainsMono Nerd Font Mono Medium 11
+gtk-toolbar-style=GTK_TOOLBAR_ICONS
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=0
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
 gtk-application-prefer-dark-theme=1
