--- a/Configs/.config/gtk-4.0/settings.ini
+++ b/Configs/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Adwaita
+gtk-theme-name=adw-gtk3-dark
 gtk-icon-theme-name=Adwaita
-gtk-font-name=JetBrainsMono Nerd Font Medium 12
+gtk-font-name=JetBrainsMono Nerd Font Mono Medium 12
 gtk-cursor-theme-name=default
 gtk-cursor-theme-size=24
 gtk-application-prefer-dark-theme=1
