--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -64,8 +64,8 @@ exec-once = mako
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-# env = LIBVA_DRIVER_NAME,nvidia
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 env = LANG,pt_BR.UTF-8
 env = LC_TIME,pt_BR.UTF-8
@@ -77,7 +77,9 @@ env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORMTHEME,qt6ct
+# env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,kvantum
+env = QT_STYLE_OVERRIDE,kvantum
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 
