feat: new configurations in rofi and more

--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -78,8 +78,6 @@ env = QT_QPA_PLATFORM,wayland;xcb
 
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 # env = QT_QPA_PLATFORMTHEME,qt6ct
-env = QT_QPA_PLATFORMTHEME,kvantum
-env = QT_STYLE_OVERRIDE,kvantum
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 
@@ -99,7 +97,8 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(cba6f7ee) rgba(b4befecc) 45deg
+    col.active_border = rgba(cba6f7ee)
+    # col.active_border = rgba(cba6f7ee) rgba(b4befecc) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -211,7 +210,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true
@@ -246,6 +245,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Y, togglefloating,
 bind = $mainMod, A, exec, $rofiPath/launcher/launcher.sh
 bind = $mainMod, comma, exec, $rofiPath/wallpaper/wallpaper.sh
+bind = $mainMod, I, exec, $rofiPath/powermenu/powermenu.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod SHIFT, M, fullscreen
