--- a/Configs/.config/kitty/kitty.conf
+++ b/Configs/.config/kitty/kitty.conf
@@ -8,9 +8,9 @@ font_size 13.0
 enable_ligatures yes
 
 # Theme
-include colorscheme/mocha.conf
+include theme/mocha.conf
 
 # Opacity
-background_opacity 0.9
+# background_opacity 0.9
 
 confirm_os_window_close 0
