--- a/Configs/.config/mako/config
+++ b/Configs/.config/mako/config
@@ -1,10 +1,10 @@
 background-color=#1e1e2e
 text-color=#cdd6f4
-border-color=#b4befe
-border-radius=10
-width=300
-height=100
+border-color=#cba6f7
+border-radius=8
 border-size=2
-padding=10
-default-timeout=5000
+padding=12
+margin=15
+
 font=JetBrainsMono Nerd Font 12
+default-timeout=5000
