--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -112,7 +112,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    # rounding = 10
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -210,7 +210,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true
@@ -218,9 +218,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
