--- a/Configs/.config/waybar/config.jsonc
+++ b/Configs/.config/waybar/config.jsonc
@@ -4,7 +4,6 @@
     "position": "top",
     "reload_style_on_change": true,
     "spacing": 0,
-    // "height": 42,
     "modules-left": [
         "custom/logo",
         "hyprland/workspaces",
@@ -18,11 +17,10 @@
         "cpu",
         "memory",
         "network",
-        // "bluetooth",
-        "custom/bluetooth",
+        "bluetooth",
         "battery",
         "pulseaudio#output",
-        "pulseaudio#input",
+        // "pulseaudio#input",
         "custom/power"
     ],
 
@@ -60,7 +58,7 @@
     "clock": {
         "locale": "pt_BR.UTF-8",
         "format": " {:%d/%m/%Y |  %H:%M}",
-        "format-alt": "{:%A, %B %d, %Y (%R)}",
+        // "format-alt": "{:%A, %B %d, %Y (%R)}",
         "tooltip-format": "<tt><big>{calendar}</big></tt>",
         "calendar": {
             "mode": "month",
@@ -91,35 +89,32 @@
         "on-click": "kitty --start-as=fullscreen --title all_is_kitty sh -c 'btop'"
     },
     "network": {
-        "format-ethernet": "  ",
-        "format-wifi": " 󰤨 ",
+        "format-ethernet": " ",
+        "format-wifi": "󰤨 ",
         "tooltip-format-ethernet": " {ifname}\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
         "tooltip-format-wifi": "󰤨 {ifname}\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
         "format-disconnected": " ⚠ ",
         "tooltip-format-disconnected": "Disconnected",
         "interval": 2
     },
-    // "bluetooth": {
-    //     "format": "",
-    //     "format-disabled": "",
-    //     "format-connected": "",
-    //     "tooltip-format": "Devices connected: {num_connections}\n{device_alias}",
-    //     "tooltip-format-connected": "Devices connected: {num_connections}\n{device_alias}",
-    //     "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-    //     "on-click": "blueman-manager"
-    // },
-    "custom/bluetooth": {
-        "exec": "~/.config/waybar/scripts/check-bluetooth.sh",
-        "return-type": "json",
-        "interval": 1
+    "bluetooth": {
+        "format": "",
+        "format-disabled": "",
+        "format-connected": "",
+        "tooltip-format": "Devices connected: {num_connections}\n{device_alias}",
+        "tooltip-format-connected": "Devices connected: {num_connections}\n{device_alias}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+        "on-click": "blueman-manager"
     },
     "battery": {
         "format": "{icon}",
         "format-icons": {
-            "charging": "",
-            "plugged": "",
-            "discharging": ["", "", "", "", ""],
-            "full": ""
+            // "charging": "",
+            // "plugged": "",
+            // "discharging": ["", "", "", "", ""],
+            // "full": "",
+            "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
+            "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
         },
         "tooltip": true,
         "tooltip-format": "Capacity: {capacity}%\n{timeTo}",
@@ -128,21 +123,20 @@
     "pulseaudio#output": {
         "format": "{icon}",
         "tooltip-format": "Volume: {volume}%",
-        "format-muted": "󰝟",
+        "format-muted": "",
         "format-icons": {
-            "headphone": "",
-            "default": ["󰖀","󰕾"]
+            "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
     },
-    "pulseaudio#input": {
-        "format": "{format_source}",
-        "tooltip-format": "Mic: {source_volume}%",
-        "on-click": "pavucontrol",
-        "max-length": 20,
-        "format-source": "󰍬",
-        "format-source-muted": "󰍭"
-    },
+    // "pulseaudio#input": {
+    //     "format": "{format_source}",
+    //     "tooltip-format": "Mic: {source_volume}%",
+    //     "on-click": "pavucontrol",
+    //     "max-length": 20,
+    //     "format-source": "󰍬",
+    //     "format-source-muted": "󰍭"
+    // },
     "custom/power": {
         "format": "󰤆",
         "tooltip": false,
