--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -51,6 +51,7 @@ $rofiPath = ~/.config/rofi
 exec-once = swww-daemon
 exec-once = waybar
 exec-once = mako
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 
 
 #############################
@@ -90,7 +91,6 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    # gaps_out = 20
     gaps_out = 10
 
     border_size = 2
