--- a/Configs/.config/waybar/config.jsonc
+++ b/Configs/.config/waybar/config.jsonc
@@ -4,6 +4,8 @@
     "position": "top",
     "reload_style_on_change": true,
     "spacing": 0,
+    "margin-left": 10,
+    "margin-right": 10,
     "modules-left": [
         "custom/logo",
         "hyprland/workspaces",
