feat: new theme to dotfiles

--- a/Configs/.config/kitty/kitty.conf
+++ b/Configs/.config/kitty/kitty.conf
@@ -1,5 +1,9 @@
 shell /usr/bin/zsh
 
+window_padding_width 0
+
+# allow_remote_control yes
+
 # Font and font size
 font_family JetBrainsMono Nerd Font
 font_size 13.0
@@ -8,7 +12,9 @@ font_size 13.0
 enable_ligatures yes
 
 # Theme
-include theme/mocha.conf
+include theme/theme.conf
+
+enable_audio_bell no
 
 # Opacity
 # background_opacity 0.9
