feat/dev: some features like menu, theme selector and more

--- a/Configs/.config/hypr/hyprlandFiles/keybindings.conf
+++ b/Configs/.config/hypr/hyprlandFiles/keybindings.conf
@@ -11,9 +11,9 @@ bind = $mainMod, C, killactive,
 bind = $mainMod CTRL SHIFT, K, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Y, togglefloating,
-bind = $mainMod, A, exec, $rofiPath/launcher/launcher.sh
-bind = $mainMod, comma, exec, $rofiPath/wallpaper/wallpaper.sh
-bind = $mainMod, I, exec, $rofiPath/powermenu/powermenu.sh
+bind = $mainMod, A, exec, $rofiPath/menu/apps_launcher/apps_launcher.sh
+bind = $mainMod, period, exec, $rofiPath/menu/menu.sh
+bind = $mainMod, I, exec, $rofiPath/menu/powermenu/powermenu.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod SHIFT, M, fullscreen
@@ -51,8 +51,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -77,7 +77,6 @@ bind = $mainMod CTRL, J, movewindow, d
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%-
-# bindel = ,XF86AudioLowerVolume, exec, set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
