--- a/Configs/.config/waybar/config.jsonc
+++ b/Configs/.config/waybar/config.jsonc
@@ -2,7 +2,7 @@
     // Configs
     "layer": "top",
     "position": "top",
-    "reload_style_on_change": true,
+    // "reload_style_on_change": true,
     "spacing": 0,
     "margin-left": 10,
     "margin-right": 10,
@@ -60,7 +60,6 @@
     "clock": {
         "locale": "pt_BR.UTF-8",
         "format": " {:%d/%m/%Y |  %H:%M}",
-        // "format-alt": "{:%A, %B %d, %Y (%R)}",
         "tooltip-format": "<tt><big>{calendar}</big></tt>",
         "calendar": {
             "mode": "month",
@@ -111,10 +110,6 @@
     "battery": {
         "format": "{icon}",
         "format-icons": {
-            // "charging": "",
-            // "plugged": "",
-            // "discharging": ["", "", "", "", ""],
-            // "full": "",
             "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
             "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
         },
