--- a/Configs/.tmux.conf
+++ b/Configs/.tmux.conf
@@ -1,32 +1,41 @@
+# Define default shell
 set-option -g default-shell /usr/bin/zsh
 
+# Enable 256 colors
 set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# Set prefix key to Ctrl+a
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# Split panes
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
-
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
+# Reload tmux config
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+# Resize panes
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
+bind -r C-h resize-pane -L 5
 
+# Maximize pane
 bind -r m resize-pane -Z 5
 
+# Enable mouse support
 set -g mouse on
 
+# Vi-style copy mode
 set-window-option -g mode-keys vi
 
+# Clipboard integration
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
@@ -40,10 +49,12 @@ set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# Theme configuration
 set -g @themepack 'powerline/default/gray'
 
+# Resurrect and Continuum settings
 set -g @resurrect-capture-pane-contents 'off'
 set -g @continuum-restore 'on'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
