--- a/Configs/.config/hypr/hyprlandFiles/autoStart.conf
+++ b/Configs/.config/hypr/hyprlandFiles/autoStart.conf
@@ -9,3 +9,4 @@ exec-once = swww-daemon
 exec-once = waybar
 exec-once = mako
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once = battery_monitor &
