--- a/Configs/.config/hypr/hyprlandFiles/environment.conf
+++ b/Configs/.config/hypr/hyprlandFiles/environment.conf
@@ -25,3 +25,4 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 env = WEBKIT_DISABLE_COMPOSITING_MODE,1
+env = PATH, /home/morais/.local/bin:$PATH
