--- a/Configs/.tmux.conf
+++ b/Configs/.tmux.conf
@@ -1,6 +1,10 @@
 # Define default shell
 set-option -g default-shell /usr/bin/zsh
 
+set-option -g renumber-windows on
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Enable 256 colors
 set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -45,15 +49,20 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Theme configuration
-set -g @themepack 'powerline/default/gray'
+set -g @tmux-dotbar-bg "#1a1b26"
+set -g @tmux-dotbar-fg "#a9b1d6"
+set -g @tmux-dotbar-fg-current "#c0caf5"
+set -g @tmux-dotbar-fg-session "#9aa5ce"
+set -g @tmux-dotbar-fg-prefix "#a9b1d6"
 
 # Resurrect and Continuum settings
-set -g @resurrect-capture-pane-contents 'off'
+set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager
