feat: new configs and some fixes

--- a/Configs/.config/mako/config
+++ b/Configs/.config/mako/config
@@ -1,6 +1,6 @@
-background-color=#1a1b26
-text-color=#c0caf5
-border-color=#c0caf5
+background-color=#1e1e2e
+text-color=#cdd6f4
+border-color=#cba6f7
 
 border-size=2
 padding=12
