--- a/Configs/.config/hypr/hyprlandFiles/colors.conf
+++ b/Configs/.config/hypr/hyprlandFiles/colors.conf
@@ -1,4 +1,4 @@
-# Tokyo Night
+# Catppuccin Mocha
 
-$active_border = rgba(c0caf5ff)
+$active_border = rgba(cba6f7ee)
 $inactive_border = rgba(595959aa)
