--- a/Configs/.tmux.conf
+++ b/Configs/.tmux.conf
@@ -51,7 +51,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sainnhe/tmux-fzf'
 
 # Theme configuration
@@ -63,7 +63,7 @@ set -g @tmux-dotbar-fg-prefix "#a9b1d6"
 
 # Resurrect and Continuum settings
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
