feat: new plugin in nvim to html preview

--- a/Configs/.config/hypr/hyprlandFiles/colors.conf
+++ b/Configs/.config/hypr/hyprlandFiles/colors.conf
@@ -1,4 +1,4 @@
-# Catppuccin Mocha
+# Tokyo Night
 
-$active_border = rgba(cba6f7ee)
+$active_border = rgba(c0caf5ff)
 $inactive_border = rgba(595959aa)
