--- a/Configs/.config/hypr/hyprlandFiles/monitors.conf
+++ b/Configs/.config/hypr/hyprlandFiles/monitors.conf
@@ -4,5 +4,6 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
-monitor=eDP-1,1366x768@60,0x0,1
-monitor=HDMI-A-2,1920x1080@60,-1920x0,1
+monitor=eDP-1,1366x768@60,1920x0,1
+monitor=HDMI-A-2,1920x1080@60,0x0,1
+monitor=DP-1,1920x1080@144,0x0,1
